<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_list_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/questionario_rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/footer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/symbol_anterior" />

        <TextView
            android:id="@+id/questionario_paginacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="1 de 20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/symbol_proximo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/questionario_botoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/questionario_rodape"
        android:weightSum="2">

        <TextView
            android:id="@+id/questionario_voltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/questionario_voltar"
            android:alpha="0.3"/>

        <TextView
            android:id="@+id/questionario_avancar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/titulo"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/questionario_proximo"
            android:textColor="@color/action_bar" />
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/questionario_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/questionario_botoes"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

</RelativeLayout>
