<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_list_bg_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/card_border"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingRight="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">


            <TextView
                android:id="@+id/card_detalhe_sincronia_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/card_detalhe_sincronia_voce_nao_esta_sincronizado"
                android:textColor="@color/destaque"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/card_detalhe_sincronia_clique_para_sincronizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/card_detalhe_sincronia_clique_para_sincronizar"
                android:textColor="@color/destaque"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_detalhe_sincronia_qtd_pesquisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/titulo"
                    android:textSize="29sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:gravity="center"
                    android:text="@string/card_detalhe_sincronia_pesquisas_respondidas_armazenadas"
                    android:textColor="@color/card_txt_light_gray"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>